Changes from jTDS 0.8.1
=========================

08/07/2004 - Brian Heineman
 o Applied patch [1005207] Modified microsoftPrepare method; (thanks to Mike
   Hutchinson for the patch).

08/06/2004 - David Kilzer
 o De-uglified the Driver.getPropertyInfo() method.  The code reads much
   cleaner now.
 o Revised insert/update/delete-new-property mini-howto in DefaultProperties.
 o Created overloaded DefaultProperties.getServerType() methods to convert
   server type from String to Integer and Integer to String.  Implemented in
   Driver and JtdsDataSource classes.
 o Created JtdsDataSourceUnitTest class.  Cleaned up AbstractDataSource to
   use DefaultProperties defaults, added missing appName and progName
   properties, fixed type of prepareSql from boolean to int, and renamed
   isLastUpdateCount() to getLastUpdateCount().  Fixed parsing of new type
   of prepareSql property in JtdsObjectFactory.getObjectInstance().
 o Updated DefaultPropertiesTestLibrary to contain flags for only testing a
   default setup of SQL Server and/or TDS 7.0.
 o Updated DriverPropertyInfo choices for prepareSql property.
 o Cleaned up DefaultPropertiesTestLibrary so it is easier to extend.
 o Created ConnectionJDBC2UnitTest.
 o Created DefaultProperties.getTdsVersion() method to convert Tds version
   string to an integer.  Created unit tests in DefaultPropertiesUnitTest.
 o Created UnitTestBase.invokeGetInstanceField() method for
   ConnectionJDBC2UnitTest.
 o On ConnectionJDBC2 class: renamed private field serverPort to portNumber,
   added private default constructor for testing, and implemented use of
   DefaultProperties.getTdsVersion().
 o INCOMPATIBLE INTERFACE CHANGE:  Renamed AbstractDataSource.getTds(),
   setTds() and private tds field to getTdsVersion(), setTdsVersion() and
   tdsVersion to match private field ConnectionJDBC2.  This also affects
   JtdsDataSource.
 o ConnectionJDBC2.unpackProperties():  Removed code that set default